# tonemapper

./: CMakeLists.txt  README.md
cmake/cli/: CMakeLists.txt
cmake/gui/: CMakeLists.txt
src/: cli.cpp  cli.h  gui.cpp  image.cpp  image.h  main-cli.cpp  tonemap.h
src/operators/: aces.h
